# scikit-multistate

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: aidssi.ipynb  covid.ipynb  models.ipynb  visualization.ipynb
src/pymsm/models/base/: __init__.py  competing_risks.py
src/pymsm/visualization/: __init__.py
src/scikit-multistate/models/: __init__.py
src/scikit-multistate/models/competing_risks/: multistate.py
src/scikit-multistate/visualization/: state_diagram.py
src/skms/: __init__.py
src/skms/data/: __init__.py
src/skms/models/: __init__.py
src/skms/models/base/: __init__.py  competing_risks.py  estimator.py  multistate.py
src/skms/models/competing_risks/: __init__.py  aft.py  cox.py
src/skms/models/multistate/: __init__.py  core.py
src/skms/preprocessing/: __init__.py  preprocessing.py
src/skms/visualization/: __init__.py  state_diagram.py
