[tool.poetry]
name = "scikit-multistate"
version = "0.1"
description = "Multistate modeling in Python - A scikit-learn compatible library"
authors = ["Edoardo Draetta"]
license = "MIT"
readme = "README.md"
repository = "https://edoardodraetta.com/hrossman/scikit-multistate"
keywords = ["multstate", "competing risks", "survival",  "scikit-learn"]
packages = [{include = "skms", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.0.0"
lifelines = "^0.27.0"
matplotlib = "^3.7.0"
joblib = "^1.3.0"
tqdm = "^4.65.0"
scikit-learn = "^1.3.0"
tabulate = "^0.9.0"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = ">=0.5.3"
coverage = {extras = ["toml"], version = "^7.3.0"}
pytest-cov = "^4.1.0"
mkdocs-material = "^9.4.0"
mknotebooks = "^0.8.0"
pre-commit = "^3.5.0"
mkdocstrings = "^0.24.0"
scikit-survival = "^0.22.0"
ipykernel = "^6.25.0"
jupyter = "^1.1.1"

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E", 
    "W", 
    "F", 
    "I", 
    "N", 
    "B", 
    "UP", 
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]
ignore = [
    "UP035",
    "UP006",
    "UP006",
]

[tool.ruff.isort]
known-first-party = ["skms"] 
